crates/tele_parser/tests/snapshots/parse__decl_with_important.snap
---
source: crates/tele_parser/tests/parse.rs
assertion_line: 34
expression: parser.parse()

---
Ok(
    StyleSheetNode {
        loc: Loc {
            start: Pos {
                offset: 0,
                line: 1,
                column: 1,
            },
            end: Pos {
                offset: 35,
                line: 1,
                column: 36,
            },
        },
        statements: [
            RuleSet(
                RuleSetNode {
                    loc: Loc {
                        start: Pos {
                            offset: 2,
                            line: 1,
                            column: 3,
                        },
                        end: Pos {
                            offset: 33,
                            line: 1,
                            column: 34,
                        },
                    },
                    prelude: ".foo",
                    prelude_tokens: [
                        Token {
                            token_type: Delim,
                            start_pos: Pos {
                                offset: 2,
                                line: 1,
                                column: 3,
                            },
                            end_pos: Pos {
                                offset: 3,
                                line: 1,
                                column: 4,
                            },
                            content: ".",
                        },
                        Token {
                            token_type: Ident,
                            start_pos: Pos {
                                offset: 3,
                                line: 1,
                                column: 4,
                            },
                            end_pos: Pos {
                                offset: 6,
                                line: 1,
                                column: 7,
                            },
                            content: "foo",
                        },
                        Token {
                            token_type: WhiteSpace,
                            start_pos: Pos {
                                offset: 6,
                                line: 1,
                                column: 7,
                            },
                            end_pos: Pos {
                                offset: 7,
                                line: 1,
                                column: 8,
                            },
                            content: " ",
                        },
                    ],
                    declarations: [
                        DeclarationNode {
                            loc: Loc {
                                start: Pos {
                                    offset: 9,
                                    line: 1,
                                    column: 10,
                                },
                                end: Pos {
                                    offset: 30,
                                    line: 1,
                                    column: 31,
                                },
                            },
                            name: "color",
                            name_tokens: [
                                Token {
                                    token_type: Ident,
                                    start_pos: Pos {
                                        offset: 9,
                                        line: 1,
                                        column: 10,
                                    },
                                    end_pos: Pos {
                                        offset: 14,
                                        line: 1,
                                        column: 15,
                                    },
                                    content: "color",
                                },
                            ],
                            value: "red",
                            value_tokens: [
                                Token {
                                    token_type: Ident,
                                    start_pos: Pos {
                                        offset: 16,
                                        line: 1,
                                        column: 17,
                                    },
                                    end_pos: Pos {
                                        offset: 19,
                                        line: 1,
                                        column: 20,
                                    },
                                    content: "red",
                                },
                                Token {
                                    token_type: WhiteSpace,
                                    start_pos: Pos {
                                        offset: 19,
                                        line: 1,
                                        column: 20,
                                    },
                                    end_pos: Pos {
                                        offset: 20,
                                        line: 1,
                                        column: 21,
                                    },
                                    content: " ",
                                },
                                Token {
                                    token_type: Delim,
                                    start_pos: Pos {
                                        offset: 20,
                                        line: 1,
                                        column: 21,
                                    },
                                    end_pos: Pos {
                                        offset: 21,
                                        line: 1,
                                        column: 22,
                                    },
                                    content: "!",
                                },
                                Token {
                                    token_type: Ident,
                                    start_pos: Pos {
                                        offset: 21,
                                        line: 1,
                                        column: 22,
                                    },
                                    end_pos: Pos {
                                        offset: 30,
                                        line: 1,
                                        column: 31,
                                    },
                                    content: "important",
                                },
                            ],
                            important: true,
                        },
                    ],
                },
            ),
        ],
    },
)
